--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Virtion.Depends/packages/
 /Virtion.Depends/Virtion.Depends/obj/
 /Virtion.Depends/Virtion.Depends/bin/
+Virtion.Depends/Virtion.Depends.sdf
+Virtion.Depends/Virtion.Depends.v12.suo
+*.suo
