--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /Virtion.Depends/packages/
 /Virtion.Depends/Virtion.Depends/obj/
 /Virtion.Depends/Virtion.Depends/bin/
-Virtion.Depends/Virtion.Depends.sdf
-Virtion.Depends/Virtion.Depends.v12.suo
 *.suo
+/Virtion.Depends/Virtion.Depends.v12.suo
+/Virtion.Depends/*.sdf
+Virtion.Depends/Virtion.Depends.v12.suo
